--- a/.github/workflows/eks-pipeline.yml
+++ b/.github/workflows/eks-pipeline.yml
@@ -43,7 +43,7 @@ jobs:
         if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
         run: |
           echo "Waiting for the EKS Cluster to be ready ........"
-          aws eks wait cluster-active --name innovatemart-eks-cluster --region ${{ env.AWS_REGION }}
+          aws eks wait cluster-active --name innovatemart-cluster --region ${{ env.AWS_REGION }}
           echo "EKS cluster is now ready"
 
       - name: Install kubectl
