--- a/.github/workflows/eks-pipeline.yml
+++ b/.github/workflows/eks-pipeline.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Update Kubeconfig
         if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
         run: |
-          aws eks update-kubeconfig --name innovatemart-eks-cluster --region ${{ env.AWS_REGION }}
+          aws eks update-kubeconfig --name innovatemart-cluster --region ${{ env.AWS_REGION }}
           sleep 60
           kubectl get nodes
           echo "Kubernetes access is configured........"
@@ -66,6 +66,7 @@ jobs:
           kubectl apply -f kubernetes.yaml
           kubectl get pods
           echo "Application deployed successfully ......"
+
 
 
 
